[tool.poetry]
name = "activitypub.py"
version = "0.1.0"
description = "Yet another ActivityPUB framework written in Python."
authors = ["Mattholy <smile.used@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "activitypub" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
requests = "^2.31.0"
pycountry = "^23.12.11"
isodate = "^0.6.1"
httpsig = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
